--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "state-control",
     "akuri"
   ],
-  "author": "AKURI Team",
+  "author": {
+    "name": "AKURI Team",
+    "email": "jorgebarrero@akuri.io",
+    "url": "https:akuri.io"
+  },
   "license": "MIT",
   "peerDependencies": {
     "@angular/core": "^20.0.0",
@@ -36,14 +40,14 @@
     "tslib": "^2.6.0"
   },
   "devDependencies": {
-    "@angular/core": "^20.2.0",
     "@angular/common": "^20.2.0",
-    "rxjs": "~7.8.0",
-    "typescript": "~5.9.2",
-    "ng-packagr": "^20.0.0",
-    "jest": "^29.7.0",
+    "@angular/core": "^20.2.0",
     "@types/jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "jest": "^29.7.0",
+    "ng-packagr": "^20.3.2",
+    "rxjs": "~7.8.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "~5.9.2"
   },
   "repository": {
     "type": "git",
